# server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO  cmakesublist.txt
.devcontainer/: Dockerfile  devcontainer.json
CMakeModules/: ConfigureChecks.cmake  nel.cmake
admin_service/: CMakeLists.txt  admin_service.cpp
ai_service/: CMakeLists.txt  README.md  admin.h  ai.cpp  ai.h  ai_aggro.cpp  ai_aggro.h  ai_bot.cpp  ai_bot.h  ai_bot_easter_egg.cpp  ai_bot_easter_egg.h  ai_bot_fauna.cpp  ai_bot_fauna.h  ai_bot_npc.cpp  ai_bot_npc.h  ai_bot_pet.cpp  ai_bot_pet.h  ai_continent.h  ai_control_npc.cpp  ai_control_npc.h  ai_entity.h  ai_entity_id.cpp  ai_entity_id.h  ai_entity_id_inline.h  ai_entity_matrix.h  ai_entity_physical.cpp  ai_entity_physical.h  ai_entity_physical_inline.h  ai_factory.h  ai_generic_fight.cpp  ai_generic_fight.h  ai_generic_fight_helpers.cpp  ai_grp.cpp  ai_grp.h  ai_grp_fauna.cpp  ai_grp_fauna.h  ai_grp_npc.cpp  ai_grp_npc.h  ai_grp_pet.cpp  ai_grp_pet.h  (+169 more)
backup_service/: CMakeLists.txt  README.md  backup_file_access.cpp  backup_file_access.h  backup_service.cpp  backup_service.h  backup_service_mod.cpp  commands.cpp  web_connection.cpp  web_connection.h
dynamic_scenario_service/: CMakeLists.txt  dynamic_scenario_service.cpp  dynamic_scenario_service.h  service.cpp  service.h
entities_game_service/: CMakeLists.txt  README.md  admin.cpp  admin.h  ai_pet_interface.cpp  ai_pet_interface.h  area_geometry.cpp  (+102 more)
naming_service/: CMakeLists.txt  naming_service.cpp
welcome_service/: CMakeLists.txt  welcome_service.cpp
(+847 files in other folders)
